fix z-index

--- a/assets/scss/variables/_layout.scss
+++ b/assets/scss/variables/_layout.scss
@@ -7,4 +7,5 @@
   --z-index-hamburger: 4;
   --z-index-switch-off: 1;
   --z-index-switch-on: 2;
+  --z-index-dropdown: 2;
 }
